tests/negative/typecheck/args_named_few.orng
// args_named_few.orng:11:20: error: struct takes 2 fields, 1 value given
//     let x = My_Type(.a = 43)
//                   ^
// 
struct My_Type {
    a: Int
    b: Int
}

fn main() -> Int {
    let x = My_Type(.a = 43)
    4
}
